@@ -2,6 +2,8 @@
 - Fix to no show icon of note in print preview
 - Better english translation (thanks to @pappi_)
 - Fix missing use of a l10n string for email sender
+- Fix for delete draft
+- Use of path var on delete file
 - Prepare for a future support for other backend for invoice data
 
 1.0 Alpha
